--- a/package.json
+++ b/package.json
@@ -13,24 +13,11 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build",
-		"build:blocks": "vite build --mode production",
-		"dev:blocks": "vite build --watch",
-		"debug:blocks": "node -e \"const manifest = require('./dist/.vite/manifest.json'); console.log('Blocks manifest:', JSON.stringify(manifest, null, 2));\""
+		"build": "vite build"
 	},
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.0.0",
-		"@vitejs/plugin-react": "^4.7.0",
-		"@wordpress/i18n": "^6.0.0",
 		"tailwindcss": "^4.0.0",
-		"vite": "^6.3.2"
-	},
-	"dependencies": {
-		"@wordpress/block-editor": "^15.0.0",
-		"@wordpress/blocks": "^15.0.0",
-		"@wordpress/components": "^30.0.0",
-		"@wordpress/element": "^6.27.0",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"vite": "^6.3.5"
 	}
 }
